force-app/main/default/objects/AccidentReception_Management__c/fields/Field111__c.field-meta.xml
<CustomField>
    <fullName>Field111__c</fullName>
    <formula>VALUE(MID(CallDate__c , FIND(&quot;/&quot;, CallDate__c )+1, FIND(&quot;/&quot;, CallDate__c , 5)-FIND(&quot;/&quot;, CallDate__c )-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>