force-app/main/default/objects/AccidentReception_Management__c/fields/Field112__c.field-meta.xml
<CustomField>
    <fullName>Field112__c</fullName>
    <formula>VALUE(MID(CallDate__c , FIND(&quot;/&quot;, CallDate__c , 5)+1, LEN(CallDate__c ) -FIND(&quot;/&quot;, CallDate__c , 5)))</formula>
    <label>日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>