force-app/main/default/objects/AccidentReception_Management__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <formula>ContractorName__r.IdentificationNumber__c &amp;&apos;_&apos;&amp;
Name &amp;&apos;_&apos;&amp; 
Left(SUBSTITUTE(SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( TEXT(  LastModifiedDate + (9/24)    ),&apos; &apos;, &apos;&apos;), &apos;-&apos; , &apos;&apos;), &apos;_&apos;, &apos;&apos;),&apos;:&apos;,&apos;&apos; ),12) &amp; 
IF ( ISBLANK( PostingContractor__c ) ,  IF ( ISBLANK( CallerNameInput__c ) , &quot;&quot;, &apos;_&apos;&amp;CallerNameInput__c) , &apos;_&apos;&amp;PostingContractor__c)</formula>
    <label>ファイル名</label>
    <type>Text</type>
</CustomField>