force-app/main/default/objects/AccidentReception_Management__c/fields/GetAccidentLocationPrefecture__c.field-meta.xml
<CustomField>
    <fullName>GetAccidentLocationPrefecture__c</fullName>
    <description>事故場所（都道府県）の項目値を傷害、傷害以外の帳票用に抽出します</description>
    <formula>MID(TEXT( AccidentLocationPrefecture__c ), 1, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>事故場所（都道府県）取得</label>
    <type>Text</type>
</CustomField>