force-app/main/default/objects/AccidentReception_Management__c/fields/HospitalNameCL1__c.field-meta.xml
<CustomField>
    <fullName>HospitalNameCL1__c</fullName>
    <label>病院名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>