force-app/main/default/objects/AccidentReception_Management__c/fields/HospitalPhoneNumberCL__c.field-meta.xml
<CustomField>
    <fullName>HospitalPhoneNumberCL__c</fullName>
    <label>病院TEL</label>
    <type>Phone</type>
</CustomField>