force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallDate__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDate__c</fullName>
    <formula>IncomingCallTimeInput__c</formula>
    <label>入電時間（日付）</label>
    <type>Date</type>
</CustomField>