force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallDateTime__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDateTime__c</fullName>
    <formula>TIMEVALUE(IncomingCallTimeInput__c)</formula>
    <label>入電時間（時間）</label>
    <type>Time</type>
</CustomField>