force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallDateW__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDateW__c</fullName>
    <formula>IF ( AND ( IncomingCallDate__c &gt;= DATE (1868,09,08), IncomingCallDate__c &lt;= DATE (1912,07,29)), &quot;M&quot; &amp; TEXT ( YEAR ( IncomingCallDate__c ) - 1867 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( IncomingCallDate__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( IncomingCallDate__c )) &amp; &quot;日&quot;, IF ( AND ( IncomingCallDate__c &gt;= DATE (1912,07,30), IncomingCallDate__c &lt;= DATE (1926,12,24)), &quot;T&quot; &amp; TEXT ( YEAR ( IncomingCallDate__c ) - 1911) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( IncomingCallDate__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( IncomingCallDate__c )) &amp; &quot;日&quot;, IF ( AND ( IncomingCallDate__c &gt;= DATE (1926,12,25), IncomingCallDate__c &lt;= DATE (1989,01,07)), &quot;S&quot; &amp; TEXT ( YEAR ( IncomingCallDate__c ) - 1925 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( IncomingCallDate__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( IncomingCallDate__c )) &amp; &quot;日&quot;, IF ( AND ( IncomingCallDate__c &gt;= DATE (1989,01,08), IncomingCallDate__c &lt;= DATE (2019,04,30)), &quot;H&quot; &amp; TEXT ( YEAR ( IncomingCallDate__c ) - 1988 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( IncomingCallDate__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( IncomingCallDate__c )) &amp; &quot;日&quot;, IF ( IncomingCallDate__c &gt;= DATE (2019,05,01), &quot;R&quot; &amp; TEXT ( YEAR ( IncomingCallDate__c) - 2018) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( IncomingCallDate__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( IncomingCallDate__c )) &amp; &quot;日&quot;, &quot;&quot;)))))</formula>
    <label>入電時間（和暦）</label>
    <type>Text</type>
</CustomField>