force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallDayCDS__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDayCDS__c</fullName>
    <label>第一報入電日（西暦）</label>
    <type>Date</type>
</CustomField>