force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallTimeCD__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallTimeCD__c</fullName>
    <label>第一報入電時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>