force-app/main/default/objects/AccidentReception_Management__c/fields/IncomingCallTimeInput__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallTimeInput__c</fullName>
    <label>入電時間</label>
    <type>DateTime</type>
</CustomField>