force-app/main/default/objects/AccidentReception_Management__c/fields/InconvenientTime__c.field-meta.xml
<CustomField>
    <fullName>InconvenientTime__c</fullName>
    <label>時間指定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>