force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredAddress1__c.field-meta.xml
<CustomField>
    <fullName>InjuredAddress1__c</fullName>
    <label>負傷者住所①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>