force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredAddress2__c.field-meta.xml
<CustomField>
    <fullName>InjuredAddress2__c</fullName>
    <label>負傷者住所②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>