force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredAge__c.field-meta.xml
<CustomField>
    <fullName>InjuredAge__c</fullName>
    <formula>FLOOR(( AccidentDateInput__c - InjuredBirthdayS__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年齢（負傷者）（火新）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>