force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredAgeCL__c.field-meta.xml
<CustomField>
    <fullName>InjuredAgeCL__c</fullName>
    <formula>FLOOR(( AccidentDateInput__c - InjuredBirthdayCLS__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年齢（負傷者）（人損）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>