force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredBirthday__c.field-meta.xml
<CustomField>
    <fullName>InjuredBirthday__c</fullName>
    <label>生年月日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>