force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredBirthdayS__c.field-meta.xml
<CustomField>
    <fullName>InjuredBirthdayS__c</fullName>
    <label>生年月日（負傷者）（火新）（西暦）</label>
    <type>Date</type>
</CustomField>