force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredMobileNumber1__c.field-meta.xml
<CustomField>
    <fullName>InjuredMobileNumber1__c</fullName>
    <label>負傷者①携帯番号</label>
    <type>Phone</type>
</CustomField>