force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredNameInput2__c.field-meta.xml
<CustomField>
    <fullName>InjuredNameInput2__c</fullName>
    <label>負傷者氏名②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>