force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPart__c.field-meta.xml
<CustomField>
    <fullName>InjuredPart__c</fullName>
    <label>部位</label>
    <length>255</length>
    <type>Text</type>
</CustomField>