force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPhoneNumber1__c.field-meta.xml
<CustomField>
    <fullName>InjuredPhoneNumber1__c</fullName>
    <label>負傷者TEL①</label>
    <type>Phone</type>
</CustomField>