force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPhoneNumber1CL__c.field-meta.xml
<CustomField>
    <fullName>InjuredPhoneNumber1CL__c</fullName>
    <label>連絡先Ａ</label>
    <type>Phone</type>
</CustomField>