force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>InjuredPhoneNumber2__c</fullName>
    <label>負傷者TEL②</label>
    <type>Phone</type>
</CustomField>