force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPhoneNumber2CL__c.field-meta.xml
<CustomField>
    <fullName>InjuredPhoneNumber2CL__c</fullName>
    <label>連絡先Ｂ</label>
    <type>Phone</type>
</CustomField>