force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredPhoneNumber2Hisin__c.field-meta.xml
<CustomField>
    <fullName>InjuredPhoneNumber2Hisin__c</fullName>
    <label>連絡先②</label>
    <type>Phone</type>
</CustomField>