force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredType__c.field-meta.xml
<CustomField>
    <fullName>InjuredType__c</fullName>
    <label>負傷者区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自車運転者</fullName>
            </value>
            <value>
                <fullName>自車同乗者</fullName>
            </value>
            <value>
                <fullName>相手運転者</fullName>
            </value>
            <value>
                <fullName>相手同乗者</fullName>
            </value>
            <value>
                <fullName>車外</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <isActive>false</isActive>
                <label>その他</label>
            </value>
            <value>
                <fullName>対物車両同乗者</fullName>
                <isActive>false</isActive>
                <label>対物車両同乗者</label>
            </value>
            <value>
                <fullName>対物車両運転者</fullName>
                <isActive>false</isActive>
                <label>対物車両運転者</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>