force-app/main/default/objects/AccidentReception_Management__c/fields/InjuredTypeInputCL__c.field-meta.xml
<CustomField>
    <fullName>InjuredTypeInputCL__c</fullName>
    <label>負傷者の区分（自動車人損）（フリー入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>