force-app/main/default/objects/AccidentReception_Management__c/fields/InjurySiteSymptoms__c.field-meta.xml
<CustomField>
    <fullName>InjurySiteSymptoms__c</fullName>
    <label>部位症状</label>
    <type>TextArea</type>
</CustomField>