force-app/main/default/objects/AccidentReception_Management__c/fields/InsuranceItem1__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItem1__c</fullName>
    <label>保険種目①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>