force-app/main/default/objects/AccidentReception_Management__c/fields/InsuranceItem2__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItem2__c</fullName>
    <label>保険種目②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>