force-app/main/default/objects/AccidentReception_Management__c/fields/InsurancePeriod1FromS__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod1FromS__c</fullName>
    <label>保険始期日①（西暦）</label>
    <type>Date</type>
</CustomField>