force-app/main/default/objects/AccidentReception_Management__c/fields/InsurancePeriod1To__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod1To__c</fullName>
    <label>保険終期日①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>