force-app/main/default/objects/AccidentReception_Management__c/fields/InsurancePeriod2From__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod2From__c</fullName>
    <label>保険始期日②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>