force-app/main/default/objects/AccidentReception_Management__c/fields/InsurancePeriod2FromS__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod2FromS__c</fullName>
    <label>保険始期日②</label>
    <type>Date</type>
</CustomField>