force-app/main/default/objects/AccidentReception_Management__c/fields/InsurancePeriod2To__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod2To__c</fullName>
    <label>保険終期日②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>