force-app/main/default/objects/AccidentReception_Management__c/fields/InsuranceYesNo__c.field-meta.xml
<CustomField>
    <fullName>InsuranceYesNo__c</fullName>
    <label>他保険有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
            <value>
                <fullName>未聴取</fullName>
            </value>
            <value>
                <fullName>未選択</fullName>
                <isActive>false</isActive>
                <label>未選択</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>