force-app/main/default/objects/AccidentReception_Management__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <label>事故履歴上の被保険者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>