force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredAddress__c.field-meta.xml
<CustomField>
    <fullName>InsuredAddress__c</fullName>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>