force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredContactInfoInput__c.field-meta.xml
<CustomField>
    <fullName>InsuredContactInfoInput__c</fullName>
    <label>連絡先Ａ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>