force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredContactInput2__c.field-meta.xml
<CustomField>
    <fullName>InsuredContactInput2__c</fullName>
    <label>連絡先Ｂ</label>
    <length>40</length>
    <type>Text</type>
</CustomField>