force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredKana__c.field-meta.xml
<CustomField>
    <fullName>InsuredKana__c</fullName>
    <label>被保険者名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>