force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredPersonAge__c.field-meta.xml
<CustomField>
    <fullName>InsuredPersonAge__c</fullName>
    <formula>FLOOR( ( AccidentDateInput__c - InsuredPersonBirth__c ) / 365.2425 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>被保険者の年齢</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>