force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredPersonBirth__c.field-meta.xml
<CustomField>
    <fullName>InsuredPersonBirth__c</fullName>
    <label>生年月日（被保険者）（西暦）</label>
    <type>Date</type>
</CustomField>