force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredPersonInput2__c.field-meta.xml
<CustomField>
    <fullName>InsuredPersonInput2__c</fullName>
    <label>記名被保険者名②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>