force-app/main/default/objects/AccidentReception_Management__c/fields/InsuredPersonName2Input__c.field-meta.xml
<CustomField>
    <fullName>InsuredPersonName2Input__c</fullName>
    <label>記名被保険者名②（フリー入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>